[package]
name = "actix-gcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# lists the name crates from crates.io 
[dependencies]
actix-web = "1.0.8"
# derive gives a more terse implementation
serde = {version = "1.0", features = ["derive"]}